添加一种新的对话框UI风格

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,107 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.sty.custom.dialog.MainActivity">
 
-    <Button
-        android:text="@string/btn_alert_success"
-        android:textAllCaps="false"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:id="@+id/btn_success"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="42dp"
-        android:layout_marginStart="42dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:gravity="center_horizontal">
 
-    <Button
-        android:text="@string/btn_alert_error"
-        android:textAllCaps="false"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_error"
-        android:layout_alignTop="@+id/btn_success"
-        android:layout_toRightOf="@+id/btn_success"
-        android:layout_toEndOf="@+id/btn_success"
-        android:layout_marginLeft="53dp"
-        android:layout_marginStart="53dp" />
+            <Button
+                android:id="@+id/btn_normal"
+                android:text="@string/btn_alert_normal"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
 
-    <Button
-        android:text="@string/btn_alert_exit"
-        android:textAllCaps="false"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:id="@+id/btn_exit"
-        android:layout_below="@+id/btn_success"
-        android:layout_alignLeft="@+id/btn_success"
-        android:layout_alignStart="@+id/btn_success" />
+            <Button
+                android:id="@+id/btn_exit"
+                android:text="@string/btn_alert_exit"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
 
-    <Button
-        android:text="@string/btn_alert_success_confirm"
-        android:textAllCaps="false"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_success_confirm"
-        android:layout_marginRight="14dp"
-        android:layout_marginEnd="14dp"
-        android:layout_alignBaseline="@+id/btn_exit"
-        android:layout_alignBottom="@+id/btn_exit"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+            <Button
+                android:id="@+id/btn_success"
+                android:text="@string/btn_alert_success"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
 
-    <Button
-        android:text="@string/btn_alert_error_confirm"
-        android:textAllCaps="false"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_error_confirm"
-        android:layout_below="@+id/btn_exit"
-        android:layout_alignLeft="@+id/btn_exit"
-        android:layout_alignStart="@+id/btn_exit"
-        android:layout_marginTop="20dp" />
+            <Button
+                android:id="@+id/btn_success_confirm"
+                android:text="@string/btn_alert_success_confirm"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
 
-    <Button
-        android:text="@string/btn_alert_normal"
-        android:textAllCaps="false"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_normal"
-        android:layout_alignTop="@+id/btn_error_confirm"
-        android:layout_alignLeft="@+id/btn_error"
-        android:layout_alignStart="@+id/btn_error" />
+            <Button
+                android:id="@+id/btn_error"
+                android:text="@string/btn_alert_error"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
 
-    <Button
-        android:text="@string/btn_alert_progress"
-        android:textAllCaps="false"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:id="@+id/btn_progress"
-        android:layout_below="@+id/btn_error_confirm"
-        android:layout_alignLeft="@+id/btn_error_confirm"
-        android:layout_alignStart="@+id/btn_error_confirm" />
+            <Button
+                android:id="@+id/btn_error_confirm"
+                android:text="@string/btn_alert_error_confirm"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
 
-    <Button
-        android:text="@string/btn_alert_input_type"
-        android:textAllCaps="false"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_input_type"
-        android:layout_alignBaseline="@+id/btn_progress"
-        android:layout_alignBottom="@+id/btn_progress"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/btn_error_confirm"
-        android:layout_toEndOf="@+id/btn_error_confirm" />
+            <Button
+                android:id="@+id/btn_progress"
+                android:text="@string/btn_alert_progress"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
 
-</RelativeLayout>
+            <Button
+                android:id="@+id/btn_input_type"
+                android:text="@string/btn_alert_input_type"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
+
+            <Button
+                android:id="@+id/btn_image_type"
+                android:text="@string/btn_alert_image"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:gravity="center_horizontal">
+            <Button
+                android:id="@+id/btn_normal_new"
+                android:text="@string/btn_alert_normal_new"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
+
+            <Button
+                android:id="@+id/btn_exit_new"
+                android:text="@string/btn_alert_exit_new"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
+
+            <Button
+                android:id="@+id/btn_success_new"
+                android:text="@string/btn_alert_success_new"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
+
+            <Button
+                android:id="@+id/btn_success_confirm_new"
+                android:text="@string/btn_alert_success_confirm_new"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
+
+            <Button
+                android:id="@+id/btn_error_new"
+                android:text="@string/btn_alert_error_new"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
+
+            <Button
+                android:id="@+id/btn_error_confirm_new"
+                android:text="@string/btn_alert_error_confirm_new"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
+
+            <Button
+                android:id="@+id/btn_progress_new"
+                android:text="@string/btn_alert_progress_new"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
+
+            <Button
+                android:id="@+id/btn_input_type_new"
+                android:text="@string/btn_alert_input_type_new"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
+
+            <Button
+                android:id="@+id/btn_image_type_new"
+                android:text="@string/btn_alert_image_new"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
+        </LinearLayout>
+
+    </LinearLayout>
+</ScrollView>
