--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#5677fc</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
@@ -20,4 +20,7 @@
 
     <!-- unimportant text color -->
     <color name="prompt_text_color">#858585</color>
+
+    <color name="trans_detail_color_normal">#202020</color>
+    <color name="new_dialog_divider_bg">#E3E4EA</color>
 </resources>
