--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin">5dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="alert_width_small">140dp</dimen>
     <dimen name="button_height">45dp</dimen>
@@ -54,4 +54,26 @@
     <dimen name="space_left_and_right_large">15dp</dimen>
 
     <dimen name="edit_height">50dp</dimen>
+
+
+    <dimen name="alert_width_new">248dp</dimen>
+    <dimen name="alert_height_new">260dp</dimen>
+    <dimen name="dialog_icon_new">100dp</dimen>
+    <dimen name="dialog_icon_margin_top">24dp</dimen>
+    <dimen name="normal_text_view_margin_top">20dp</dimen>
+    <dimen name="normal_text_view_margin_bottom">16dp</dimen>
+    <dimen name="content_text_view_margin_top">20dp</dimen>
+    <dimen name="content_text_view_margin_bottom">8dp</dimen>
+    <dimen name="content_text_view_margin_lr">24dp</dimen>
+    <dimen name="content_text_view_line_space">8dp</dimen>
+    <dimen name="new_dialog_error_tips_margin_top">16dp</dimen>
+    <dimen name="new_dialog_padding_bottom">8dp</dimen>
+    <dimen name="new_dialog_button_layout_height">48dp</dimen>
+    <dimen name="new_dialog_cancel_button_width">64dp</dimen>
+    <dimen name="new_dialog_cancel_button_height">36dp</dimen>
+    <dimen name="new_dialog_ok_button_width">48dp</dimen>
+    <dimen name="new_dialog_ok_button_height">36dp</dimen>
+    <dimen name="new_dialog_ok_button_margin_left">8dp</dimen>
+    <dimen name="new_dialog_ok_button_margin_right">16dp</dimen>
+
 </resources>
