--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,11 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="Roboto_Regular_16">
+        <item name="android:fontFamily" tools:targetApi="jelly_bean">sans-serif</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="Roboto_Regular_18">
         <item name="android:fontFamily" tools:targetApi="jelly_bean">sans-serif</item>
         <item name="android:textSize">18sp</item>
